adicionado argumento para ignorar diretorio dentro do volume

--- a/mysql/deployment.yaml
+++ b/mysql/deployment.yaml
@@ -18,6 +18,8 @@ spec: # spec do deployment
       containers:
         - image: mysql:5.7
           name: mysql-server
+          args:
+            - "--ignore-db-dir=lost+found"
 
           env:
             - name: MYSQL_ROOT_PASSWORD
