--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.14.6-alpine3.12 as builder
 
 COPY ./src/greeting_web_server .
-RUN CGO_ENABLED=0 GOOS=linux go build main.go
+ENV CGO_ENABLED 0
+RUN GOOS=linux go build main.go
 
 EXPOSE 8000
 
